--- a/scss/index.scss
+++ b/scss/index.scss
@@ -5,7 +5,7 @@
 body {
     width: 100%;
     background: url(../images/background_mo.png) no-repeat;
-    background-size: 100% 100%;
+    background-size: 100%;
 
     @include responsive(tablet-size) {
         background: url(../images/background.png) no-repeat;
@@ -44,9 +44,8 @@ body {
     header {
         position: relative;
         width: 100%;
-        height: 1080px;
+        height: 100vh;
         overflow: hidden;
-        background-color: teal;
 
         .planet_1 {
             position: absolute;
@@ -81,6 +80,11 @@ body {
                         top: 19%;
                     }
                 }
+            }
+
+            @include responsive(pc-size) {
+                left: 18%;
+                width: 7%;
             }
         }
 
@@ -120,6 +124,11 @@ body {
                     }
                 }
             }
+
+            @include responsive(pc-size) {
+                right: 20%;
+                width: 5%;
+            }
         }
 
         .spaceship_flex {
@@ -145,6 +154,10 @@ body {
 
             @include responsive(tablet-size) {
                 width: 30%;
+            }
+
+            @include responsive(pc-size) {
+                width: 20%;
             }
 
             &::before, &::after {
@@ -268,6 +281,12 @@ body {
                     }
                 }
             }
+
+            @include responsive(pc-size) {
+                top: 8%;
+                left: 7%;
+                width: 17%;
+            }
         }
 
         .planet_4 {
@@ -307,16 +326,22 @@ body {
                     }
                 }
             }
+
+            @include responsive(pc-size) {
+                top: 8%;
+                left: 68%;
+                width: 20%;
+            }
         }
     }
 
     main {
         .hello {
             position: relative;
+            display: flex;
+            align-items: center;
             width: 100%;
-            height: 1080px;
-        background-color: teal;
-
+            height: 100vh;
             
             .wrapper {
                 @include wrapper;
@@ -325,23 +350,20 @@ body {
                     @include wrapper;
                     display: flex;
                     flex-wrap: nowrap;
-                    margin-top: 50%;
                 }
 
                 .hello_img {
                     position: relative;
                     width: 45%;
-                    margin: auto;
+                    margin: 0 auto;
                     margin-bottom: 25px;
     
                     @include responsive(tablet-size) {
                         width: 35%;
-                        margin-top: 25px;
                     }
     
                     @include responsive(pc-size) {
                         width: 50%;
-                        margin-top: 30px;
                         margin-bottom: 30px;
                     }
     
@@ -390,6 +412,7 @@ body {
                         .frame {
                             z-index: -1;
                         }
+    
                         img {
                             position: absolute;
                             top: 50%;
@@ -426,7 +449,7 @@ body {
                         }
     
                         @include responsive(pc-size) {
-                            display: inline-block;
+                            display: inline;
                             font: {
                                 size: 4.7em;
                             }
@@ -449,7 +472,7 @@ body {
                         }
     
                         @include responsive(pc-size) {
-                            display: inline-block;
+                            display: inline;
                             font: {
                                 size: 3em;
                             }
@@ -937,14 +960,19 @@ body {
         width: 100%;
         height: 100vh;
         text-align: center;
-        padding-top: 100%;
+        padding-top: 50%;
         background: url(../images/planet_fo.png) no-repeat right bottom;
         background-size: 95%;
 
         @include responsive(tablet-size) {
-            padding-top: 50%;
+            padding-top: 35%;
             background: url(../images/planet_fo_pc.png) no-repeat right bottom;
             background-size: 95%;
+        }
+
+        @include responsive(pc-size) {
+            padding-top: 30%;
+            background-size: 97%;
         }
 
         h2 {
