--- a/scss/mixin.scss
+++ b/scss/mixin.scss
@@ -1,7 +1,7 @@
 @mixin wrapper {
     width: 100%;
-    max-width: 1200px;
-    max-height: 1080px;
+    max-width: 1920px;
+    // max-height: 1080px;
     min-height: 640px;
     margin: 0 auto;
 }
