--- a/css/index.css
+++ b/css/index.css
@@ -50,8 +50,24 @@ footer {
 
 body {
   width: 100%;
+  margin: 0;
+  overflow-x: hidden;
   background: url(../images/background_mo.png) no-repeat;
-  background-size: cover;
+  background-size: 100% 100%;
+}
+
+body::-webkit-scrollbar {
+  width: 10px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background: -webkit-gradient(linear, left top, left bottom, from(#5300d6), to(#dd0055));
+  background: linear-gradient(#5300d6, #dd0055);
+  border-radius: 5px;
+}
+
+body::-webkit-scrollbar-track {
+  background: #371c69;
 }
 
 @media screen and (min-width: 768px) {
@@ -727,7 +743,7 @@ body main .hello .wrapper .hello_text {
 }
 
 body main .hello .wrapper .hello_text h1 {
-  font-size: 3em;
+  font-size: 5em;
   font-weight: 700;
 }
 
@@ -741,7 +757,7 @@ body main .hello .wrapper .hello_text h1 {
   body main .hello .wrapper .hello_text h1 {
     display: inline;
     font-size: 4.7em;
-    margin-right: 20px;
+    margin-right: 25px;
   }
 }
 
@@ -753,15 +769,14 @@ body main .hello .wrapper .hello_text h1 {
 }
 
 body main .hello .wrapper .hello_text .change-text {
-  font-size: 1.6em;
+  font-size: 3em;
   font-weight: 700;
-  margin-bottom: 15px;
+  margin-bottom: 20px;
 }
 
 @media screen and (min-width: 768px) {
   body main .hello .wrapper .hello_text .change-text {
     font-size: 2.5em;
-    margin-bottom: 20px;
   }
 }
 
@@ -810,16 +825,15 @@ body main .hello .wrapper .hello_text .change-text::after {
 }
 
 body main .hello .wrapper .hello_text p {
-  font-size: 1em;
+  font-size: 2em;
   font-weight: 700;
-  margin-bottom: 18px;
+  margin-bottom: 25px;
 }
 
 @media screen and (min-width: 768px) {
   body main .hello .wrapper .hello_text p {
     font-size: 1.8em;
     font-weight: 600;
-    margin-bottom: 22px;
   }
 }
 
@@ -832,11 +846,11 @@ body main .hello .wrapper .hello_text p {
 
 body main .hello .wrapper .hello_text .pr_list,
 body main .hello .wrapper .hello_text .history_list {
-  font-size: 0.8em;
+  font-size: 1.5em;
   font-weight: 700;
   letter-spacing: 0.05em;
-  line-height: 22px;
-  margin-bottom: 15px;
+  line-height: 37px;
+  margin-bottom: 25px;
   list-style: square inside url("../svg/star.svg");
 }
 
@@ -897,6 +911,14 @@ body main .skill .wrapper {
   margin: 0 auto;
 }
 
+body main .skill .wrapper .solar-system {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  margin: auto;
+  overflow: hidden;
+}
+
 @media screen and (min-width: 768px) {
   body main .skill .wrapper .solar-system {
     position: relative;
@@ -915,16 +937,21 @@ body main .skill .wrapper {
   }
 }
 
-@media screen and (min-width: 768px) {
-  body main .skill .wrapper .orbit {
-    border: 1px dashed #666;
-  }
+body main .skill .wrapper .orbit {
+  border: 1px dashed #666;
 }
 
 @media screen and (min-width: 1024px) {
   body main .skill .wrapper .orbit {
     border: 2.5px dashed #666;
   }
+}
+
+body main .skill .wrapper #show_image,
+body main .skill .wrapper .orbit,
+body main .skill .wrapper .orbit + div,
+body main .skill .wrapper .orbit + div > div {
+  position: absolute;
 }
 
 @media screen and (min-width: 768px) {
@@ -936,6 +963,13 @@ body main .skill .wrapper {
   }
 }
 
+body main .skill .wrapper #show_image,
+body main .skill .wrapper .orbit,
+body main .skill .wrapper .orbit + div {
+  top: 50%;
+  left: 100%;
+}
+
 @media screen and (min-width: 768px) {
   body main .skill .wrapper #show_image,
   body main .skill .wrapper .orbit,
@@ -945,6 +979,11 @@ body main .skill .wrapper {
   }
 }
 
+body main .skill .wrapper .orbit + div > div {
+  top: 0;
+  left: 50%;
+}
+
 @media screen and (min-width: 768px) {
   body main .skill .wrapper .orbit + div > div {
     top: 0;
@@ -952,12 +991,10 @@ body main .skill .wrapper {
   }
 }
 
-@media screen and (min-width: 768px) {
-  body main .skill .wrapper .orbit,
-  body main .skill .wrapper .orbit + div div,
-  body main .skill .wrapper #earth {
-    border-radius: 50%;
-  }
+body main .skill .wrapper .orbit,
+body main .skill .wrapper .orbit + div div,
+body main .skill .wrapper #earth {
+  border-radius: 50%;
 }
 
 body main .skill .wrapper #show_image {
@@ -1000,25 +1037,40 @@ body main .skill .wrapper #show_image {
   }
 }
 
+body main .skill .wrapper #adobe {
+  margin-top: -42.5px;
+  margin-left: -42.5px;
+  height: 85px;
+  width: 85px;
+  border-radius: 50%;
+  -webkit-box-shadow: 0 0 34px #3a4385;
+          box-shadow: 0 0 34px #3a4385;
+}
+
 @media screen and (min-width: 768px) {
   body main .skill .wrapper #adobe {
     margin-top: -20px;
     margin-left: -20px;
     height: 40px;
     width: 40px;
-    border-radius: 50%;
-    -webkit-box-shadow: 0 0 34px #3a4385;
-            box-shadow: 0 0 34px #3a4385;
   }
 }
 
 @media screen and (min-width: 1024px) {
   body main .skill .wrapper #adobe {
-    width: 60px;
-    height: 60px;
-    margin-top: -30px;
-    margin-left: -30px;
+    width: 90px;
+    height: 90px;
+    margin-top: -45px;
+    margin-left: -45px;
   }
+}
+
+body main .skill .wrapper .adobe-orbit,
+body main .skill .wrapper .adobe-spin {
+  width: 200px;
+  height: 200px;
+  margin-left: -100px;
+  margin-top: -100px;
 }
 
 @media screen and (min-width: 768px) {
@@ -1041,25 +1093,40 @@ body main .skill .wrapper #show_image {
   }
 }
 
+body main .skill .wrapper #html_css {
+  margin-top: -42.5px;
+  margin-left: -42.5px;
+  height: 85px;
+  width: 85px;
+  border-radius: 50%;
+  -webkit-box-shadow: 0 0 34px #3a4385;
+          box-shadow: 0 0 34px #3a4385;
+}
+
 @media screen and (min-width: 768px) {
   body main .skill .wrapper #html_css {
     margin-top: -20px;
     margin-left: -20px;
     height: 40px;
     width: 40px;
-    border-radius: 50%;
-    -webkit-box-shadow: 0 0 34px #3a4385;
-            box-shadow: 0 0 34px #3a4385;
   }
 }
 
 @media screen and (min-width: 1024px) {
   body main .skill .wrapper #html_css {
-    width: 60px;
-    height: 60px;
-    margin-top: -30px;
-    margin-left: -30px;
+    width: 90px;
+    height: 90px;
+    margin-top: -45px;
+    margin-left: -45px;
   }
+}
+
+body main .skill .wrapper .html_css-orbit,
+body main .skill .wrapper .html_css-spin {
+  width: 450px;
+  height: 450px;
+  margin-left: -225px;
+  margin-top: -225px;
 }
 
 @media screen and (min-width: 768px) {
@@ -1082,28 +1149,40 @@ body main .skill .wrapper #show_image {
   }
 }
 
+body main .skill .wrapper #js {
+  margin-top: -42.5px;
+  margin-left: -42.5px;
+  height: 85px;
+  width: 85px;
+  border-radius: 50%;
+  -webkit-box-shadow: 0 0 34px #3a4385;
+          box-shadow: 0 0 34px #3a4385;
+}
+
 @media screen and (min-width: 768px) {
   body main .skill .wrapper #js {
-    position: absolute;
-    top: 0;
-    left: 50%;
     height: 40px;
     width: 40px;
     margin-left: -20px;
     margin-top: -20px;
-    border-radius: 50%;
-    -webkit-box-shadow: 0 0 34px #3a4385;
-            box-shadow: 0 0 34px #3a4385;
   }
 }
 
 @media screen and (min-width: 1024px) {
   body main .skill .wrapper #js {
-    width: 60px;
-    height: 60px;
-    margin-top: -30px;
-    margin-left: -30px;
+    width: 90px;
+    height: 90px;
+    margin-top: -45px;
+    margin-left: -45px;
   }
+}
+
+body main .skill .wrapper .js-orbit,
+body main .skill .wrapper .js-spin {
+  width: 750px;
+  height: 750px;
+  margin-left: -375px;
+  margin-top: -375px;
 }
 
 @media screen and (min-width: 768px) {
@@ -1126,25 +1205,40 @@ body main .skill .wrapper #show_image {
   }
 }
 
+body main .skill .wrapper #mars {
+  margin-top: -42.5px;
+  margin-left: -42.5px;
+  height: 85px;
+  width: 85px;
+  border-radius: 50%;
+  -webkit-box-shadow: 0 0 34px #3a4385;
+          box-shadow: 0 0 34px #3a4385;
+}
+
 @media screen and (min-width: 768px) {
   body main .skill .wrapper #mars {
     margin-top: -20px;
     margin-left: -20px;
     height: 40px;
     width: 40px;
-    background-color: #863222;
-    -webkit-box-shadow: 0 0 14px #a64232;
-            box-shadow: 0 0 14px #a64232;
   }
 }
 
 @media screen and (min-width: 1024px) {
   body main .skill .wrapper #mars {
-    width: 60px;
-    height: 60px;
-    margin-top: -30px;
-    margin-left: -30px;
+    width: 90px;
+    height: 90px;
+    margin-top: -45px;
+    margin-left: -45px;
   }
+}
+
+body main .skill .wrapper .mars-orbit,
+body main .skill .wrapper .mars-spin {
+  width: 1000px;
+  height: 1000px;
+  margin-left: -500px;
+  margin-top: -500px;
 }
 
 @media screen and (min-width: 768px) {
@@ -1181,11 +1275,43 @@ body main .skill .wrapper #show_image {
   }
 }
 
+@-webkit-keyframes spin-right-mo {
+  50% {
+    -webkit-transform: rotate(-180deg);
+            transform: rotate(-180deg);
+  }
+  100% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+}
+
+@keyframes spin-right-mo {
+  50% {
+    -webkit-transform: rotate(-180deg);
+            transform: rotate(-180deg);
+  }
+  100% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+}
+
+body main .skill .wrapper .adobe-spin {
+  -webkit-animation: spin-right-mo 15s linear infinite;
+          animation: spin-right-mo 15s linear infinite;
+}
+
 @media screen and (min-width: 768px) {
   body main .skill .wrapper .adobe-spin {
     -webkit-animation: spin-right 8.8s linear infinite;
             animation: spin-right 8.8s linear infinite;
   }
+}
+
+body main .skill .wrapper .html_css-spin {
+  -webkit-animation: spin-right-mo 10s linear infinite;
+          animation: spin-right-mo 10s linear infinite;
 }
 
 @media screen and (min-width: 768px) {
@@ -1195,6 +1321,11 @@ body main .skill .wrapper #show_image {
   }
 }
 
+body main .skill .wrapper .js-spin {
+  -webkit-animation: spin-right-mo 13s linear infinite;
+          animation: spin-right-mo 13s linear infinite;
+}
+
 @media screen and (min-width: 768px) {
   body main .skill .wrapper .js-spin {
     -webkit-animation: spin-right 36.5s linear infinite;
@@ -1202,16 +1333,30 @@ body main .skill .wrapper #show_image {
   }
 }
 
+body main .skill .wrapper .mars-spin {
+  -webkit-animation: spin-right-mo 12s linear infinite;
+          animation: spin-right-mo 12s linear infinite;
+}
+
 @media screen and (min-width: 768px) {
   body main .skill .wrapper .mars-spin {
-    -webkit-animation: spin-right 68.7s linear infinite;
-            animation: spin-right 68.7s linear infinite;
+    -webkit-animation: spin-right 32s linear infinite;
+            animation: spin-right 32s linear infinite;
   }
 }
 
 body main .popol {
   width: 100%;
   height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 }
 
 @media screen and (min-width: 768px) {
@@ -1238,6 +1383,10 @@ body main .popol .wrapper {
 
 body main .popol .wrapper a {
   margin-top: 50px;
+}
+
+body main .popol .wrapper a:first-child {
+  margin-top: 0;
 }
 
 body main .popol .wrapper a img {
@@ -1351,7 +1500,7 @@ body main .etc .wrapper {
 
 body main .etc .wrapper .stone_1 {
   position: absolute;
-  top: 20%;
+  top: 12%;
   left: 11%;
   width: 23%;
 }
@@ -1374,7 +1523,7 @@ body main .etc .wrapper .stone_1 {
 
 body main .etc .wrapper .stone_2 {
   position: absolute;
-  top: 25%;
+  top: 18%;
   left: 60%;
   width: 17%;
 }
@@ -1396,7 +1545,7 @@ body main .etc .wrapper .stone_2 {
 
 body main .etc .wrapper .stone_3 {
   position: absolute;
-  top: 37%;
+  top: 34%;
   left: 32%;
   width: 20%;
 }
@@ -1438,7 +1587,7 @@ body main .etc .wrapper .stone_4 {
 
 body main .etc .wrapper .stone_5 {
   position: absolute;
-  top: 52%;
+  top: 55%;
   left: 20%;
   width: 18%;
 }
@@ -1459,9 +1608,9 @@ body main .etc .wrapper .stone_5 {
 
 body main .etc .wrapper .stone_6 {
   position: absolute;
-  top: 62%;
-  left: 50%;
-  width: 22%;
+  top: 64%;
+  left: 54%;
+  width: 18%;
 }
 
 @media screen and (min-width: 768px) {
@@ -1480,7 +1629,7 @@ body main .etc .wrapper .stone_6 {
 
 body main .etc .wrapper .stone_7 {
   position: absolute;
-  top: 70%;
+  top: 76%;
   left: 18%;
   width: 20%;
 }
@@ -1501,7 +1650,7 @@ body main .etc .wrapper .stone_7 {
 
 body main .etc .wrapper .stone_8 {
   position: absolute;
-  top: 74%;
+  top: 78%;
   left: 58%;
   width: 19%;
 }
